# GDCleaner

./: Cargo.toml  Makefile  README.md  TODO.md  config.toml  install.sh
src/: cleanup.rs  discovery.rs  main.rs  settings.rs
tests/: gen_mock_project.sh
