[package]
name = "gdcleaner"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["full"]}
clap = {version = "4.6.0", features = ["derive"]}
serde = { version = "1.0.228", features = ["derive"]}
config = "0.15.22"
futures = "0.3.32"
colored = "3.1.1"
dirs = "6"
