[package]
name = "gdcleaner"
license = "Apache-2.0"
description = "A simple, asynchronous cleaning tool to delete dependecies files taking up a lot of space "
version = "1.1.0"
homepage = "https://github.com/gdnathan/GDCleaner"
repository = "https://github.com/gdnathan/GDCleaner"
readme = "README.md"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["full"]}
clap = {version = "4.6.0", features = ["derive"]}
serde = { version = "1.0.228", features = ["derive"]}
futures = "0.3.32"
colored = "3.1.1"
toml = "1.1.0"
